--- a/index.html
+++ b/index.html
@@ -3,7 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guess my number</title>
+    <title>Guess-my-number</title>
+    <link href="./style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    />
   </head>
-  <body></body>
+  <body>
+    <h1 class="page-head">Guess Me🙂</h1>
+    <h2 class="secret-number">?</h2>
+    <input class="input-value" type="number" />
+    <h6 class="message">Start Guessing</h6>
+    <p>Score : <span class="score"></span></p>
+    <p>High-Score : <span class="highscore"></span></p>
+
+    <div>
+      <button class="btn-check">Check</button>
+      <button class="btn-again">Again</button>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
